--- a/WebTestApp/Base.lproj/Main.storyboard
+++ b/WebTestApp/Base.lproj/Main.storyboard
@@ -67,11 +67,63 @@
                         <outlet property="lblStatus" destination="Dhv-SQ-D4T" id="MWN-n0-dXl"/>
                         <outlet property="tfPassword" destination="T4Z-MD-qQz" id="1ze-Y7-YpF"/>
                         <outlet property="tfUsername" destination="WJd-CN-pVB" id="PKX-1T-sku"/>
+                        <segue destination="a0M-bx-qH0" kind="show" identifier="showDataSegue" id="XJR-53-jV9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="358" y="374"/>
+            <point key="canvasLocation" x="342" y="376"/>
+        </scene>
+        <!--Data Table View Controller-->
+        <scene sceneID="rIM-jd-J0G">
+            <objects>
+                <tableViewController id="LZs-rp-qaJ" customClass="DataTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="wgN-fL-KC8">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="2Xn-I2-r8s">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2Xn-I2-r8s" id="5jW-B0-S2f">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="LZs-rp-qaJ" id="JS7-Vx-l7R"/>
+                            <outlet property="delegate" destination="LZs-rp-qaJ" id="3sT-AR-WM3"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="VhU-OR-DLe">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="uHU-Tu-hmI">
+                            <connections>
+                                <action selector="onBackClick:" destination="LZs-rp-qaJ" id="MIY-C4-2Ry"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nc9-zc-lYI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2114" y="376"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5ar-hB-BbJ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="a0M-bx-qH0" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Uir-Yv-9RJ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="LZs-rp-qaJ" kind="relationship" relationship="rootViewController" id="DkI-Wn-KD3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DcI-JW-TOE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1308" y="376"/>
         </scene>
     </scenes>
 </document>
